src/styles/components/_tags.scss
.octo-inline-tags {
  box-sizing: border-box;
  border-radius: var(--octo-radius-default);
  padding: 0.5rem !important;

  .octo-inline-tags__flex-row {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    margin: -0.25rem;
  }
  .octo-inline-tags__flex-item {
    padding: 0.25rem;

    &.is-limited {
      max-width: 12rem;
    }

    &.is-input {
      max-width: 100%;
      flex: 1;
      flex-shrink: 0;
      .__input {
        padding: 0.25rem 0.5rem;
        width: 100%;
        min-width: 8rem;

        &:focus {
          outline: none;
        }
      }
    }
  }

  .octo-inline-tags__autocomplete {
    margin-top: 0.5rem;
    margin-left: 0.5rem;
    .input {
      border: none !important;
      box-shadow: none !important;
      padding: 0;
      border-radius: 0;
    }
  }
}

.octo-tag {
  background: var(--octo-muted-200);
  color: var(--octo-text-default);
  padding: 0.25rem 0.5rem;
  border-radius: 8px;
  display: flex;
  align-items: center;

  .has-ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &:hover {
    background: var(--octo-muted-500);
    .octo-tag__remove {
      color: var(--octo-text-default);
      .octo-tag__remove-icon {
        background: white;
      }
    }
  }

  .octo-tag__remove {
    color: var(--octo-text-muted);
    &:focus {
      outline: none;
      .octo-tag__remove-icon {
        box-shadow: 0px 0px 0px 1px var(--octo-secondary-500);
        // background: var(--octo-secondary-500);
      }
    }
    &:hover {
      color: var(--octo-text-danger);
      .octo-tag__remove-icon {
        background: white;
      }
    }
    display: flex;
    align-items: center;
    margin-left: auto;
    padding-left: 0.5rem;
    .octo-tag__remove-icon {
      border-radius: 1rem;
      width: 1rem;
      height: 1rem;
    }
  }
}

.octo-stacked-tags {
  margin-top: 0.5rem;
  list-style: none;
  padding: 0;

  .octo-stacked-tags__tag-row {
    // background: teal;
    & + & {
      margin-top: 1rem;
    }

    .__btn {
      border-radius: var(--octo-radius-large);
      padding: 8px 15px;
      display: flex;
      align-items: center;
      width: 100%;
      .__label {
        line-height: 1;
        flex: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        text-align: left;
      }
      .__label-icon {
        width: 1.25rem;
        height: 1.25rem;
        margin-right: 7px;
        flex-shrink: 0;
      }
      .__close-icon {
        color: var(--octo-text-muted);
        margin-left: auto;
        width: 1.25rem;
        height: 1.25rem;
        flex-shrink: 0;
      }
      &:focus {
        outline: none;
      }

      &:hover {
        background-color: var(--octo-inverted-500);
        color: var(--octo-text-primary);
        .__close-icon {
          color: var(--octo-text-danger);
        }
      }
    }
  }
}

.octo-select-tags {
  position: relative;
}

.octo-tags-search {
  position: absolute;
  // right: 0 !important;
  left: 0 !important;
  background-color: var(--octo-inverted-500);
  border-radius: var(--octo-radius-large);
  box-shadow: var(--octo-shadow-black);
  padding: 1rem;
  list-style: none;
  z-index: 10;
  max-height: 200px;
  overflow-y: auto;

  .octo-tags-search__row {
    .__btn {
      border-radius: var(--octo-radius-large);
      padding: 8px 15px;
      display: flex;
      align-items: center;
      width: 100%;
      .__label {
        flex: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        text-align: left;
        line-height: 20px;
        display: flex;
        align-items: flex-end;

        .__ml-2 {
          margin-left: 0.25rem;
        }

        span {
          background-color: var(--octo-text-mark);
        }
      }

      .__info {
        line-height: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        text-align: right;
        color: var(--octo-muted-500);
      }

      .__label-icon {
        width: 1.25rem;
        height: 1.25rem;
        margin-right: 7px;
        flex-shrink: 0;
      }
      .__close-icon {
        color: var(--octo-text-muted);
        margin-left: auto;
        width: 1.25rem;
        height: 1.25rem;
        flex-shrink: 0;
      }
      &:focus {
        outline: none;
      }

      &:hover,
      &.is-active {
        background-color: var(--octo-muted-100);
        color: var(--octo-text-primary);
        .__close-icon {
          color: var(--octo-text-danger);
        }

        .__info {
          line-height: 1;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          text-align: right;
          color: var(--octo-text-danger);
        }
      }
    }
  }
}

